Improve clickability of cards and new list link.

--- a/handlebars/simple_card.hbs
+++ b/handlebars/simple_card.hbs
@@ -1,2 +1,2 @@
-<span class="editTitle fa fa-pencil" aria-hidden="true"></span><a href="#{{id}}"><span class="title">{{title}}</span></a>
+<a href="#{{id}}" class="title">{{title}}</a><span class="editTitle fa fa-pencil" aria-hidden="true"></span>
 <textarea class="editTitleInput hidden"></textarea>
