--- a/public/stylesheets/mixins.styl
+++ b/public/stylesheets/mixins.styl
@@ -30,6 +30,10 @@ card()
   padding: 8px
   position: relative
 
+  a
+    display: inline-block
+    width: 100%
+
   &:hover
     background-color: darken(colors.card_bg, 5)
 
