Reorganize Jade templates.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,1 +1,15 @@
 extends layout
+
+block content
+  header
+    div(class="searchWrapper")
+      span(class="fa fa-search" aria-hidden="true")
+      input.searchInput
+      
+    span(class="logo") Cards
+    
+    ul
+
+  main
+   
+  aside(class="hidden")
