Prepare for production.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,13 +12,4 @@ html
   body
     block content
   
-    +javascript_include_tag('vendor/bower')
-    +javascript_include_tag('vendor/jquery-ui.min')
-    +javascript_include_tag('vendor/backbone.localStorage')
-    +javascript_include_tag('handlebars_templates')
-    +javascript_include_tag('app')
-    +javascript_include_tag('models/card', 'collections/cards', 'views/simple_card', 'views/card')
-    +javascript_include_tag('models/list', 'collections/lists', 'views/list')
-    +javascript_include_tag('views/lists')
-    +javascript_include_tag('views/search')
-    +javascript_include_tag('routers/router')
+    +javascript_include_tag('app.min')
